--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,8 +1,8 @@
-name: Update IPTV List
+name: IPTV List Generator
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # 每天UTC时间0点运行
+    - cron: '0 0 * * *'  # 每天UTC时间0点自动运行
   workflow_dispatch:     # 支持手动触发
 
 jobs:
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Checkout
+    - name: Checkout code
       uses: actions/checkout@v4
       
     - name: Set up Python
@@ -20,18 +20,17 @@ jobs:
         
     - name: Install dependencies
       run: pip install requests
-        
+
     - name: Run generator
       env:
-        INPUT_SOURCES:
-          https://gh.tryxd.cn/https://raw.githubusercontent.com/alantang1977/auto-iptv/main/live_ipv4.txt
-          https://raw.githubusercontent.com/iptv-org/iptv/master/streams/cn.m3u
-      run: python iptv_processor.py
-      
+        INPUT_SOURCES: ${{ secrets.INPUT_SOURCES }}  # 从仓库Secrets获取源
+      run: |
+        python iptv_generator.py
+        
     - name: Commit changes
       run: |
         git config --global user.name "GitHub Actions"
         git config --global user.email "actions@github.com"
         git add output/live.*
-        git commit -m "Auto-update IPTV lists" || echo "No changes to commit"
+        git commit -m "自动更新IPTV列表 [$(date +'%Y-%m-%d')]" || echo "无变化"
         git push
